--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             <div class="large-12 columns">
               <a class="text-center" href="http://www.jettisystems.com/" target="blank">Jetti Systems</a>
             </div>
+
+            
+
+            <div class="large-12 columns">
+              <a class="text-center" href="http://space.wccnet.edu/~cacollins/sdds" target="blank">Sternner</a>
+            </div>
+
           </div>
         </div>
 
@@ -53,6 +60,10 @@
 
             <div class="large-12 columns">
               <a class="text-center" href="http://threejs.org/docs/" target="blank">Three.js Docs</a>
+            </div>
+
+            <div class="large-12 columns">
+              <a class="text-center" href="http://learningthreejs.com/blog/archives/" target="blank">Three.js TUT</a>
             </div>
 
             <div class="large-12 columns">
