--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
               <a class="text-center" href="https://news.ycombinator.com/" target="blank">Hacker News</a>
             </div>
 
+            <div class="large-12 columns">
+              <a class="text-center" href="https://eager.io/blog/smarter-link-underlines/" target="blank">RM: Link Underlines</a>
+            </div>
+
+            
+
           </div>
         </div>
         
