--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             <div class="large-12 columns">
               <a class="text-center" href="https://portal.wccnet.edu/" target="blank">WCC Portal</a>
             </div>
+
+            <div class="large-12 columns">
+              <a class="text-center" href="http://space.wccnet.edu/~cacollins/gen-tut-ins/" target="blank">Proctor Assignment</a>
+            </div>
           </div>
         </div>
 
